[package]
name = "echo"
version = "0.1.5"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
jmespath = "0.3.0"
kubewarden-policy-sdk = { version = "0.12.0", default_features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
